--- a/scss/style.scss
+++ b/scss/style.scss
@@ -44,5 +44,7 @@ body {
 @import "_info";
 //--------------------------------------track--------------------------------------------------
 @import "_track";
+//--------------------------------------evo-------------------------------------------
+@import "_evo";
 //*----------------------------------------footer-------------------------------------
 @import "_footer";
