--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,7 +2,7 @@
 //*-------------header----------------------------------------------------------------
 .header {
     padding: 25px 0px 0px 0px;
-    min-height: 70px;
+    min-height: 60px;
     position: absolute;
     top: 0;
     left: 0;
@@ -30,19 +30,8 @@
 }
 
 .menu {
-    &__icon {
-    }
-
     &__body {
         display: flex;
-    }
-
-    &__list {
-        &_left {
-        }
-
-        &_right {
-        }
     }
 
     &__link {
@@ -69,7 +58,7 @@
 
 @media (max-width: $lg) {
     .header {
-        background: rgba(0, 0, 0, 0.8);
+        padding-top: 20px;
         position: fixed;
         top: 0;
         left: 0;
@@ -81,6 +70,7 @@
         display: flex;
         align-items: center;
         justify-content: right;
+
         &__list {
             & > li {
                 margin: 0px 0px 20px 0px;
@@ -99,30 +89,19 @@
 
         &__body {
             flex-direction: column;
+            align-items: center;
             transition: left 0.5s ease 0s;
-            padding: 90px 30px 30px 30px;
+            padding: 40px 30px 30px 30px;
             position: fixed;
             top: 0;
             left: -100%;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: rgba(39, 31, 31, 0.9);
             overflow: auto;
             text-align: center;
 
-            &::before {
-                content: "";
-                width: 100%;
-                height: 70px;
-                background: #000;
-                position: fixed;
-                transition: left 0.5s ease 0s;
-                top: 0;
-                left: -100%;
-                z-index: 5;
-            }
-
-            .header__logo {
+            .menu__logo {
                 order: 1;
                 margin: 0px 0px 20px 0px;
             }
@@ -152,7 +131,7 @@
             &::before,
             span {
                 width: 100%;
-                background: #fff;
+                background: #290909;
                 height: 10%;
                 position: absolute;
                 left: 0;
@@ -170,6 +149,22 @@
             span {
                 top: 50%;
                 transform: translateY(-50%);
+            }
+
+            &._active {
+                span {
+                    transform: translateY(-50%) scale(0);
+                }
+
+                &::before {
+                    top: 50%;
+                    transform: translateY(-50%) rotate(-45deg);
+                }
+
+                &::after {
+                    top: 50%;
+                    transform: translateY(-50%) rotate(45deg);
+                }
             }
         }
 
