--- a/scss/_info.scss
+++ b/scss/_info.scss
@@ -3,10 +3,34 @@
 .info {
     padding: 100px 0px;
 
+    @media (max-width: $md) {
+        padding: 70px 0;
+    }
+
+    @media (max-width: $sm) {
+        padding: 40px 0;
+    }
+
     &__block {
         margin: 0px 0px 100px 0px;
+
+        @media (max-width: $md) {
+            margin: 0px 0px 60px 0px;
+        }
+
+        @media (max-width: $sm) {
+            margin: 0px 0px 35px 0px;
+        }
+
         display: flex;
         justify-content: space-between;
+
+        @media (max-width: $md) {
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+        }
+
         &_db {
             display: block;
         }
@@ -16,16 +40,42 @@
         }
         &:nth-last-child(2) {
             margin: 0px 0px 66px 0px;
+
+            @media (max-width: $md) {
+                margin: 0px 0px 30px 0px;
+            }
+
+            @media (max-width: $sm) {
+                margin: 0px 0px 20px 0px;
+            }
         }
     }
 
     &__title {
         margin: 0px 0px 30px 0px;
+
+        @media (max-width: $md) {
+            margin: 0px 0px 20px 0px;
+        }
+
+        @media (max-width: $sm) {
+            margin: 0px 0px 10px 0px;
+        }
     }
 
     &__text {
         margin: 0px 0px 30px 0px;
         max-width: 377px;
+
+        @media (max-width: $md) {
+            margin: 0 0 20px 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        @media (max-width: $sm) {
+            margin: 0px 0px 15px 0px;
+        }
     }
 
     &__textbox {
@@ -34,6 +84,22 @@
         justify-content: space-between;
         .info__text {
             flex-basis: 439px;
+
+            @media (max-width: $md) {
+                flex-basis: auto;
+            }
+        }
+
+        @media (max-width: $md) {
+            flex-direction: column;
+            text-align: center;
+            align-items: center;
+
+            margin: 0px 0px 20px 0px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
         }
     }
 
@@ -58,6 +124,10 @@
             }
         }
 
+        @media (max-width: $md) {
+            flex-basis: auto;
+        }
+
         @media (min-width: 992px) {
             margin: 0px 15px 0px 0px;
         }
@@ -65,7 +135,11 @@
 
     &__table {
         flex-basis: 450px;
+        @media (max-width: $md) {
+            flex-basis: auto;
+        }
         padding: 20px 0px 0px 0px;
+        margin: 0px 0px 0px 15px;
         border-bottom: 1px solid $bl;
         border-top: 1px solid $bl;
 
