--- a/scss/_track.scss
+++ b/scss/_track.scss
@@ -8,12 +8,26 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
+
+        @media (max-width: $lg) {
+            padding: 35px 0px 50px 0px;
+            min-height: auto;
+        }
+
+        @media (max-width: $md) {
+            padding: 25px 0px 30px 0px;
+        }
+
+        @media (max-width: $sm) {
+            text-align: center;
+        }
     }
 
     &__content {
         flex-grow: 1;
+        margin: 0px 0px 30px 0px;
         &:last-child {
-            margin: 0;
+            margin-bottom: 0;
         }
     }
 
@@ -33,8 +47,4 @@
             object-fit: cover;
         }
     }
-}
-.container {
-}
-.title {
 }
