--- a/scss/_main-block.scss
+++ b/scss/_main-block.scss
@@ -8,6 +8,7 @@
         display: flex;
         flex-direction: column;
         padding: 102px 0px 30px 0px;
+        width: 100%;
         text-align: center;
         font-family: "Impact", sans-serif;
 
