--- a/scss/_track.scss
+++ b/scss/_track.scss
@@ -8,6 +8,7 @@
         min-height: 100vh;
         display: flex;
         flex-direction: column;
+        width: 100%;
 
         @media (max-width: $lg) {
             padding: 35px 0px 50px 0px;
