--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import "_null";
 //*-------------------------------------wrapper---------------------------------------
 .wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -46,5 +46,7 @@ body {
 @import "_track";
 //--------------------------------------evo-------------------------------------------
 @import "_evo";
+//--------------------------------------blog-------------------------------------------
+@import "_blog";
 //*----------------------------------------footer-------------------------------------
 @import "_footer";
