--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,1 +1,145 @@
 //*-------------footer----------------------------------------------------------------
+.footer {
+    padding: 100px 0px 80px 0px;
+    @media (max-width: $lg) {
+        padding: 80px 0px 65px 0px;
+    }
+    @media (max-width: $md) {
+        padding: 60px 0px 45px 0px;
+    }
+    @media (max-width: $sm) {
+        padding: 35px 0px 20px 0px;
+    }
+    background-color: $dg;
+    color: #fff;
+
+    a {
+        color: inherit;
+    }
+
+    &__title {
+        margin: 0px 0px 50px 0px;
+        @media (max-width: $md) {
+            text-align: center;
+            margin: 0px 0px 30px 0px;
+        }
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &__top {
+        font-size: 16px;
+        display: flex;
+        justify-content: space-between;
+        gap: 0 20px;
+        margin: 0px 0px 87px 0px;
+        @media (max-width: $lg) {
+            margin: 0px 0px 65px 0px;
+        }
+        @media (max-width: $md) {
+            display: block;
+            text-align: center;
+            margin: 0px 0px 50px 0px;
+        }
+        @media (max-width: $sm) {
+            margin: 0px 0px 30px 0px;
+        }
+        dt {
+            font-weight: 700;
+            margin: 0px 0px 10px 0px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+        dd {
+            margin: 0px 0px 20px 0px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+    &__item {
+        margin: 0px 0px 50px 0px;
+        line-height: 1.125;
+        @media (max-width: $md) {
+            margin: 0px 0px 25px 0px;
+        }
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    &__info {
+        @media (max-width: $md) {
+            margin: 0px 0px 35px 0px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+    }
+
+    &__social-list {
+        display: flex;
+        gap: 0 20px;
+        @media (max-width: $md) {
+            justify-content: center;
+        }
+    }
+
+    &__link {
+    }
+
+    &__location {
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+        @media (max-width: $md) {
+            display: block;
+            text-align: center;
+            & > * {
+                display: block;
+                margin: 0px 0px 15px 0px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
+        align-items: center;
+        gap: 0 15px;
+    }
+
+    &__logo {
+        img {
+            max-width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
+.location-footer {
+    & > * {
+        margin: 0px 0px 20px 0px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &__title {
+        font-weight: 700;
+    }
+
+    &__text {
+        display: block;
+        line-height: 1.125;
+    }
+
+    &__map {
+        iframe {
+            max-width: 100%;
+        }
+        height: 250px;
+    }
+}
