--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -23,6 +23,19 @@
         }
     }
 
+    &__mobile-logo {
+        width: 50px;
+        z-index: 5;
+        img {
+            max-width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        @media (min-width: ($lg + 1)) {
+            display: none;
+        }
+    }
+
     &__container {
         max-width: 1220px;
         padding: 0 10px;
@@ -58,7 +71,7 @@
 
 @media (max-width: $lg) {
     .header {
-        padding-top: 20px;
+        padding-top: 10px;
         position: fixed;
         top: 0;
         left: 0;
@@ -69,7 +82,7 @@
     .menu {
         display: flex;
         align-items: center;
-        justify-content: right;
+        justify-content: space-between;
 
         &__list {
             & > li {
@@ -91,19 +104,18 @@
             flex-direction: column;
             align-items: center;
             transition: left 0.5s ease 0s;
-            padding: 40px 30px 30px 30px;
+            padding: 80px 30px 30px 30px;
             position: fixed;
             top: 0;
             left: -100%;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-color: rgba(39, 31, 31, 0.9);
             overflow: auto;
             text-align: center;
 
             .menu__logo {
-                order: 1;
-                margin: 0px 0px 20px 0px;
+                display: none;
             }
 
             &._active {
@@ -116,7 +128,7 @@
 
         &__icon {
             width: 30px;
-            height: 18px;
+            height: 20px;
             display: block;
             cursor: pointer;
             position: relative;
