--- a/scss/_info.scss
+++ b/scss/_info.scss
@@ -68,13 +68,13 @@
         max-width: 377px;
 
         @media (max-width: $md) {
-            margin: 0 0 20px 0;
+            margin: 0 0 25px 0;
             margin-left: auto;
             margin-right: auto;
         }
 
         @media (max-width: $sm) {
-            margin: 0px 0px 15px 0px;
+            margin-bottom: 20px;
         }
     }
 
@@ -135,9 +135,6 @@
 
     &__table {
         flex-basis: 450px;
-        @media (max-width: $md) {
-            flex-basis: auto;
-        }
         padding: 20px 0px 0px 0px;
         margin: 0px 0px 0px 15px;
         border-bottom: 1px solid $bl;
@@ -145,6 +142,16 @@
 
         td {
             padding-bottom: 20px;
+        }
+        @media (max-width: $md) {
+            margin-left: 0;
+            align-self: stretch;
+            flex-basis: auto;
+        }
+        @media (max-width: 510px) {
+            td:nth-child(2) {
+                padding: 0 5px;
+            }
         }
     }
 }
