--- a/scss/_main-block.scss
+++ b/scss/_main-block.scss
@@ -2,6 +2,9 @@
 //*--------------------------------------main-block--------------------------------------------------------------------
 .main-block {
     background: url(../img/main-block/01.jpg) center/cover no-repeat;
+    @media (max-width: $lg) {
+        background-position: left center;
+    }
 
     &__inner {
         min-height: 100vh;
@@ -63,6 +66,12 @@
         @media (max-width: $md) {
             font-size: 35px;
         }
+        @media (max-width: $sm) {
+            font-size: 28px;
+        }
+        @media (max-width: 340px) {
+            font-size: 24px;
+        }
 
         span {
             font-size: 34px;
@@ -72,6 +81,12 @@
 
             @media (max-width: $md) {
                 font-size: 25px;
+            }
+            @media (max-width: $sm) {
+                font-size: 20px;
+            }
+            @media (max-width: 340px) {
+                font-size: 18px;
             }
         }
     }
