--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_fonts";
 //*--------------------------------------blog-------------------------------------------
 .blog {
     padding: 0px 0px 100px 0px;
