--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,5 @@
+@import "_variables";
+@import "_fonts";
 //*-------------footer----------------------------------------------------------------
 .footer {
     padding: 100px 0px 80px 0px;
