--- a/scss/_main-block.scss
+++ b/scss/_main-block.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_fonts";
 //*--------------------------------------main-block--------------------------------------------------------------------
 .main-block {
     background: url(../img/main-block/01.jpg) center/cover no-repeat;
