--- a/scss/_track.scss
+++ b/scss/_track.scss
@@ -1,4 +1,5 @@
 @import "_variables";
+@import "_fonts";
 //*--------------------------------------track--------------------------------------------------------------------
 .track {
     background: url(/img/track/01.jpg) center/cover no-repeat;
